UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Target_Achieved_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>SRx Head</fullName>
                </value>
                <value>
                    <fullName>SRx Head Rejected</fullName>
                </value>
                <value>
                    <fullName>Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Marketing Head Rejected</fullName>
                </value>
                <value>
                    <fullName>RSM Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>RSM Head</fullName>
                </value>
                <value>
                    <fullName>West RSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiator_Approval_Completed_Time_String__c</fullName>
        <label>Initiator Approval Completed Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiator_Approval_Completed_Time__c</fullName>
        <label>Initiator Approval Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initiator_Approval_Sent_Time_String__c</fullName>
        <label>Initiator Approval Sent Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiator_Approval_Sent_Time__c</fullName>
        <label>Initiator Approval Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initiator_Head_Comments__c</fullName>
        <label>Initiator Head Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initiator_Status__c</fullName>
        <label>Initiator Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Initiated</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intial_Approver__c</fullName>
        <label>Intial Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Approver__c</fullName>
        <label>Marketing Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Head_Approval_Completed_Str__c</fullName>
        <label>Marketing Head Approval Completed Str</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Head_Approval_Completed_Time__c</fullName>
        <label>Marketing Head Approval Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Head_Approval_Sent_Time_String__c</fullName>
        <label>Marketing Head Approval Sent Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Head_Approval_Sent_Time__c</fullName>
        <label>Marketing Head Approval Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Head_Comments__c</fullName>
        <label>Marketing Head Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Head_Status__c</fullName>
        <label>Marketing Head Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Initiated</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Marketing Head Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Approver__c</fullName>
        <label>RSM Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Head_Approval_Completed_Time_String__c</fullName>
        <label>RSM Head Approval Completed Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Head_Approval_Completed_Time__c</fullName>
        <label>RSM Head Approval Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RSM_Head_Approval_Sent_Time_String__c</fullName>
        <label>RSM Head Approval Sent Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Head_Approval_Sent_Time__c</fullName>
        <label>RSM Head Approval Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RSM_Head_Comments__c</fullName>
        <label>RSM Head Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSM_Head_Status__c</fullName>
        <label>RSM Head Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Initiated</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>East RSM Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSM_West_Approval_Completed_Time_String__c</fullName>
        <label>RSM West Approval Completed Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_West_Approval_Completed_Time__c</fullName>
        <label>RSM West Approval Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RSM_West_Approval_Sent_Time_String__c</fullName>
        <label>RSM West Approval Sent Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_West_Approver__c</fullName>
        <label>RSM West Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_West_Head_Approval_Sent_Time__c</fullName>
        <label>RSM West Head Approval Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RSM_West_Head_Comments__c</fullName>
        <label>RSM West Head Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSM_West_Head_Status__c</fullName>
        <label>RSM West Head Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Initiated</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>West RSM Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SRx_Approver__c</fullName>
        <label>SRx Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRx_Head_Approval_Completed_Time_String__c</fullName>
        <label>SRx Head Approval Completed Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRx_Head_Approval_Completed_Time__c</fullName>
        <label>SRx Head Approval Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SRx_Head_Approval_Sent_Time_String__c</fullName>
        <label>SRx Head Approval Sent Time String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRx_Head_Approval_Sent_Time__c</fullName>
        <label>SRx Head Approval Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SRx_Head_Comments__c</fullName>
        <label>SRx Head Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SRx_Head_Status__c</fullName>
        <label>SRx Head Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Initiated</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>SRx Head Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Number__c</fullName>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Target Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Target_Status__c</fullName>
        <label>Target Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Target Achieved Approval</label>
    <nameField>
        <label>Target Achieved Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Achieved Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>